--- a/.github/workflows/dock_trigg.yml
+++ b/.github/workflows/dock_trigg.yml
@@ -14,6 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Run a multi-line script
+      - name: run_docker
         run: |
           docker build -t output .
